# zappy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Doxyfile  Doxygen.vim  Makefile  README.md  bleach.c  configure-venv.sh  dir_11bc0974ce736ce9a6fadebbeb7a8314.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_eb8cc02461988d7ac71e6ab0aa3c7205.html  doc.md  ecsls.toml  flake.nix  genindex.html  graph_legend.html  index.html  modules.html  navtreedata.js  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  warning_flags.c.conf  warning_flags.cpp.conf  zappy_ref-v3.0.0.tgz  zappy_ref.tgz
_sources/: index.md.txt
ai/: __init__.py  __main__.py  cipher.py  commands.py  elevation.json  network.py  player.py
api/: api.html  dir_gui.html  dir_server.html  file_gui_main.cpp.html  file_server_main.c.html  namespace_std.html  program_listing_file_gui_main.cpp.html  program_listing_file_server_main.c.html  unabridged_orphan.html
assets/: 17855_Alien_v1.obj3D  2D_sprite.obj3D  Egg.obj3D  cube.obj3D  fragmentShader.glsl  ressources.obj3D  rock.obj3D  vertexShader.glsl
developer/: architecture.html  contribution.html  systems.html  usage_ai.html
docs/: README.md  conf.py  index.md  modules.rst
gui/: ArgsParser.cpp  ArgsParser.hpp  Display.cpp  Display.hpp  ErrorOr.hpp  Request.hpp  Synthesizer.cpp  Synthesizer.hpp  Zappy.cpp  Zappy.hpp  args_parser.cpp  args_parser.hpp  main.cpp  test.cpp
nix/: bleach.nix  doc.nix  exhale.nix  pre-commit-hooks.nix  ref-gui.nix  ref-server.nix  runner.nix  zappy-ai.nix  zappy-gui.nix  zappy-server.nix  zappy_ai.nix  zappy_gui.nix  zappy_server.nix
protocol/: protocol.html
runner/: pyproject.toml
runner/zappy/: __main__.py  binpool.py  run.py  team_names.py
scripts/: align_columns.py  check_commit_message.py  discard_headers.py  insert_headers.py
search/: pages_0.js
server/: args_parser.c  args_parser.h  assign_team.c  client.h  client_io.c  client_lifecycle.c  client_manager.c  debug.h  (+19 more)
(+169 files in other folders)
