[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zappy_ai"
version = "0.0.1"
authors = [
  { name = "Sigmanificient", email = "yohann.boniface@epitech.eu" }
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only"
]

dependencies = []
# license = { text = "" }

[tool.hatch.build]
packages = [
  "ai",
  "ai.crow"
]

[tool.hatch.build.package-data]
"ai" = ["*.json"]

[project.scripts]
zappy_ai = "ai.__main__:main"
