[metadata]
name = zappy_ai
version = 0.0.1
author = Sigmanificient
author_email = yohann.boniface@epitech.eu
platform = unix, linux, osx
classifiers =
  Intended Audience :: Developers
  Programming Language :: Python :: 3 :: Only

[options]
python_requires = >= 3.10
packages =
  ai
  ai.crow
package_dir = =.
include_package_data = True
zip_safe = no

[options.package_data]
ai =
  *.json

[options.entry_points]
console_scripts =
    zappy_ai = ai.__main__:main
