[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zappy"
version = "0.0.1"
authors = [
  { name = "Sigmanificient", email = "yohann.boniface@epitech.eu" }
]

requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only"
]

dependencies = []

[tool.hatch.build]
packages = ["zappy"]

[project.scripts]
zappy = "zappy.__main__:main"
